# EDGE-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example_basic.cpp  example_spatial_integration.cpp
include/core/: Coordinates.hh  Diffusion.hh  GammaRay.hh  MultiSource.hh  Spectrum.hh
include/numerics/: Interpolation.hh
include/utils/: EdgeUtils.hh
src/: edge_complete.cpp  edge_simple.cpp  main.cpp
src/core/: Coordinates.cpp  Diffusion.cpp  MultiSource.cpp  Spectrum.cpp
src/numerics/: Interpolation.cpp
src/utils/: EdgeUtils.cpp
tests/: test_basic.cpp  test_coordinates.cpp  test_spectrum.cpp
